// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`new-workspace with TypeScript config should pass linting with TypeScript config after the user installs jiti 1`] = `
"
Linting \\"new-workspace-typescript-config\\"...

All files pass linting.
"
`;

exports[`new-workspace with TypeScript config should show an error when linting using a TypeScript config before the user installs jiti 1`] = `
"
Linting \\"new-workspace-typescript-config\\"...
Error when running ESLint: You are using an outdated version of the 'jiti' library. Please update to the latest version of 'jiti' to ensure compatibility and access to the latest features."
`;
